bin_PROGRAMS = movdump h264dump vc2dump rdd36dump j2cdump jp2extract

movdump_SOURCES = movdump.cpp
h264dump_SOURCES = h264dump.c
vc2dump_SOURCES = vc2dump.c
rdd36dump_SOURCES = rdd36dump.c
j2cdump_SOURCES = j2cdump.c
jp2extract_SOURCES = jp2extract.c

AM_CFLAGS = $(BMX_CFLAGS)
AM_CXXFLAGS = $(BMX_CFLAGS)
