EXTRA_DIST = \
	inttypes.h \
	bmx.sln \
	test.sln \
	tools.sln \
	bmx/bmx.vcxproj \
	bmx/bmx.vcxproj.filters \
	bmx/gen_scm_version.cmd \
	apps/bmxtranswrap/bmxtranswrap.vcxproj \
	apps/bmxtranswrap/bmxtranswrap.vcxproj.filters \
	apps/mxf2raw/mxf2raw.vcxproj \
	apps/mxf2raw/mxf2raw.vcxproj.filters \
	apps/raw2bmx/raw2bmx.vcxproj \
	apps/raw2bmx/raw2bmx.vcxproj.filters \
	expat/expat.vcxproj \
	expat/expat.vcxproj.filters \
	test/create_test_essence/create_test_essence.vcxproj \
	test/create_test_essence/create_test_essence.vcxproj.filters \
	test/file_md5/file_md5.vcxproj \
	test/file_md5/file_md5.vcxproj.filters \
	test/file_truncate/file_truncate.vcxproj \
	test/file_truncate/file_truncate.vcxproj.filters \
	tools/h264dump/h264dump.vcxproj \
	tools/h264dump/h264dump.vcxproj.filters \
	tools/movdump/movdump.vcxproj \
	tools/movdump/movdump.vcxproj.filters \
	uriparser/uriparser.vcxproj \
	uriparser/uriparser.vcxproj.filters

