EXTRA_DIST = \
	inttypes.h \
	bmx.sln \
	test.sln \
	bmx/bmx.vcproj \
	bmx/gen_scm_version.cmd \
	apps/bmxtranswrap/bmxtranswrap.vcproj \
	apps/mxf2raw/mxf2raw.vcproj \
	apps/raw2bmx/raw2bmx.vcproj \
	test/create_test_essence/create_test_essence.vcproj \
	test/file_md5/file_md5.vcproj \
	test/file_truncate/file_truncate.vcproj

