noinst_LTLIBRARIES = libapps.la

libapps_la_SOURCES = \
	AppInfoWriter.cpp \
	AppMCALabelHelper.cpp \
	AppMXFFileFactory.cpp \
	AppTextInfoWriter.cpp \
	AppUtils.cpp \
	AppXMLInfoWriter.cpp \
	AS10Helper.cpp \
	AS11Helper.cpp \
	FrameworkHelper.cpp \
	PropertyFileParser.cpp \
	TimedTextManifestParser.cpp \
	ps_avci_header_data.h

libapps_la_CXXFLAGS = $(BMX_CFLAGS)
