noinst_LTLIBRARIES = libas02.la

libas02_la_SOURCES = \
	AS02AVCITrack.cpp \
	AS02Bundle.cpp \
	AS02Clip.cpp \
	AS02D10Track.cpp \
	AS02DVTrack.cpp \
	AS02Manifest.cpp \
	AS02MPEG2LGTrack.cpp \
	AS02PCMTrack.cpp \
	AS02PictureTrack.cpp \
	AS02Shim.cpp \
	AS02Track.cpp \
	AS02UncTrack.cpp \
	AS02Version.cpp

libas02_la_CXXFLAGS = $(BMX_CFLAGS)

