noinst_LTLIBRARIES = libavidmxf.la

libavidmxf_la_SOURCES = \
	AvidAVCITrack.cpp \
	AvidClip.cpp \
	AvidD10Track.cpp \
	AvidDVTrack.cpp \
	AvidMJPEGTrack.cpp \
	AvidMPEG2LGTrack.cpp \
	AvidPCMTrack.cpp \
	AvidPictureTrack.cpp \
	AvidTrack.cpp \
	AvidUncTrack.cpp \
	AvidVC3Track.cpp

libavidmxf_la_CXXFLAGS = $(BMX_CFLAGS)

