noinst_LTLIBRARIES = libavidmxf.la

libavidmxf_la_SOURCES = \
	AvidAlphaTrack.cpp \
	AvidAVCITrack.cpp \
	AvidAVCTrack.cpp \
	AvidClip.cpp \
	AvidD10Track.cpp \
	AvidDVTrack.cpp \
	AvidIndexTable.cpp \
	AvidInfo.cpp \
	AvidMJPEGTrack.cpp \
	AvidMPEG2LGTrack.cpp \
	AvidPCMTrack.cpp \
	AvidPictureTrack.cpp \
	AvidRGBColors.h \
	AvidTrack.cpp \
	AvidUncTrack.cpp \
	AvidVC3Track.cpp

libavidmxf_la_CXXFLAGS = $(BMX_CFLAGS)

