noinst_LTLIBRARIES = libcommon.la

libcommon_la_SOURCES = \
	ByteArray.cpp \
	CRC32.cpp \
	IMException.cpp \
	IMTypes.cpp \
	KLVParser.cpp \
	Logging.cpp \
	MD5.cpp \
	MXFUtils.cpp \
	SHA1.cpp \
	URI.cpp \
	Utils.cpp \
	XMLUtils.cpp \
	XMLWriter.cpp \
	Version.cpp

libcommon_la_CXXFLAGS = $(BMX_CFLAGS)

