noinst_LTLIBRARIES = libcommon.la

libcommon_la_SOURCES = \
	BitBuffer.cpp \
	BMXException.cpp \
	BMXTypes.cpp \
	ByteArray.cpp \
	Checksum.cpp \
	CRC32.cpp \
	EssenceType.cpp \
	KLVParser.cpp \
	Logging.cpp \
	MD5.cpp \
	MXFChecksumFile.cpp \
	MXFHTTPFile.cpp \
	MXFUtils.cpp \
	SHA1.cpp \
	URI.cpp \
	Utils.cpp \
	XMLUtils.cpp \
	XMLWriter.cpp \
	Version.cpp

libcommon_la_CXXFLAGS = $(BMX_CFLAGS)

