noinst_LTLIBRARIES = libessenceparser.la

libessenceparser_la_SOURCES = \
	AVCIEssenceParser.cpp \
	AVCIRawEssenceReader.cpp \
	DVEssenceParser.cpp \
	EssenceParserUtils.cpp \
	EssenceParserUtils.h \
	MJPEGEssenceParser.cpp \
	MPEG2EssenceParser.cpp \
	RawEssenceReader.cpp \
	SoundConversion.cpp \
	VC3EssenceParser.cpp

libessenceparser_la_CXXFLAGS = $(BMX_CFLAGS)

