noinst_LTLIBRARIES = libessenceparser.la

libessenceparser_la_SOURCES = \
	AVCEssenceParser.cpp \
	AVCIEssenceParser.cpp \
	AVCIRawEssenceReader.cpp \
	DVEssenceParser.cpp \
	EssenceParserUtils.cpp \
	EssenceParserUtils.h \
	FileEssenceSource.cpp \
	KLVEssenceSource.cpp \
	MJPEGEssenceParser.cpp \
	MPEG2AspectRatioFilter.cpp \
	MPEG2EssenceParser.cpp \
	RawEssenceReader.cpp \
	SoundConversion.cpp \
	VC3EssenceParser.cpp

libessenceparser_la_CXXFLAGS = $(BMX_CFLAGS)

