noinst_LTLIBRARIES = libmxfhelper.la

libmxfhelper_la_SOURCES = \
	ANCDataMXFDescriptorHelper.cpp \
	AVCIntraUncsMXFDescriptorHelper.cpp \
	AVCIMXFDescriptorHelper.cpp \
	D10MXFDescriptorHelper.cpp \
	DataMXFDescriptorHelper.cpp \
	DVMXFDescriptorHelper.cpp \
	MJPEGMXFDescriptorHelper.cpp \
	MPEG2LGMXFDescriptorHelper.cpp \
	MPEG2Validator.cpp \
	MXFDescriptorHelper.cpp \
	MXFFileFactory.cpp \
	MXFMCALabelHelper.cpp \
	PictureMXFDescriptorHelper.cpp \
	SoundMXFDescriptorHelper.cpp \
	UncCDCIMXFDescriptorHelper.cpp \
	UncRGBAMXFDescriptorHelper.cpp \
	VBIDataMXFDescriptorHelper.cpp \
	VC3MXFDescriptorHelper.cpp \
	WaveMXFDescriptorHelper.cpp

libmxfhelper_la_CXXFLAGS = $(BMX_CFLAGS)

