noinst_LTLIBRARIES = libmxfhelper.la

libmxfhelper_la_SOURCES = \
	ANCDataMXFDescriptorHelper.cpp \
	AVCIMXFDescriptorHelper.cpp \
	AVCMXFDescriptorHelper.cpp \
	D10MXFDescriptorHelper.cpp \
	DataMXFDescriptorHelper.cpp \
	DVMXFDescriptorHelper.cpp \
	JPEG2000MXFDescriptorHelper.cpp \
	MJPEGMXFDescriptorHelper.cpp \
	MPEG2LGMXFDescriptorHelper.cpp \
	MPEG2Validator.cpp \
	MXFDescriptorHelper.cpp \
	MXFFileFactory.cpp \
	MXFMCALabelHelper.cpp \
	PictureMXFDescriptorHelper.cpp \
	RDD36MXFDescriptorHelper.cpp \
	SoundMXFDescriptorHelper.cpp \
	TimedTextManifest.cpp \
	TimedTextMXFDescriptorHelper.cpp \
	TimedTextMXFResourceProvider.cpp \
	UncCDCIMXFDescriptorHelper.cpp \
	UncRGBAMXFDescriptorHelper.cpp \
	UniqueIdHelper.cpp \
	VBIDataMXFDescriptorHelper.cpp \
	VC2MXFDescriptorHelper.cpp \
	VC3MXFDescriptorHelper.cpp \
	WaveMXFDescriptorHelper.cpp

libmxfhelper_la_CXXFLAGS = $(BMX_CFLAGS)
