noinst_LTLIBRARIES = libmxfop1a.la

libmxfop1a_la_SOURCES = \
	OP1AANCDataTrack.cpp \
	OP1AAVCITrack.cpp \
	OP1AContentPackage.cpp \
	OP1AD10Track.cpp \
	OP1ADataTrack.cpp \
	OP1ADVTrack.cpp \
	OP1AFile.cpp \
	OP1AIndexTable.cpp \
	OP1AMPEG2LGTrack.cpp \
	OP1APCMTrack.cpp \
	OP1APictureTrack.cpp \
	OP1ATrack.cpp \
	OP1AUncTrack.cpp \
	OP1AVBIDataTrack.cpp \
	OP1AVC3Track.cpp

libmxfop1a_la_CXXFLAGS = $(BMX_CFLAGS)

