noinst_LTLIBRARIES = libmxfreader.la

libmxfreader_la_SOURCES = \
	EssenceChunkHelper.cpp \
	EssenceReader.cpp \
	IndexTableHelper.cpp \
	MXFFileReader.cpp \
	MXFFrame.cpp \
	MXFFrameBuffer.cpp \
	MXFIndexEntryExt.cpp \
	MXFPackageResolver.cpp \
	MXFReader.cpp \
	MXFTrackInfo.cpp \
	MXFTrackReader.cpp

libmxfreader_la_CXXFLAGS = $(BMX_CFLAGS)

