noinst_LTLIBRARIES = libmxfreader.la

libmxfreader_la_SOURCES = \
	EssenceChunkHelper.cpp \
	EssenceReader.cpp \
	IndexTableHelper.cpp \
	MXFFileReader.cpp \
	MXFFileTrackReader.cpp \
	MXFFrame.cpp \
	MXFFrameBuffer.cpp \
	MXFGroupReader.cpp \
	MXFIndexEntryExt.cpp \
	MXFPackageResolver.cpp \
	MXFReader.cpp \
	MXFSequenceReader.cpp \
	MXFSequenceTrackReader.cpp \
	MXFTrackInfo.cpp

libmxfreader_la_CXXFLAGS = $(BMX_CFLAGS)

