noinst_LTLIBRARIES = libmxfreader.la

libmxfreader_la_SOURCES = \
	EssenceChunkHelper.cpp \
	EssenceReader.cpp \
	FrameMetadataReader.cpp \
	IndexTableHelper.cpp \
	MXFAPPInfo.cpp \
	MXFFileIndex.cpp \
	MXFFileReader.cpp \
	MXFFileTrackReader.cpp \
	MXFFrameBuffer.cpp \
	MXFFrameMetadata.cpp \
	MXFGroupReader.cpp \
	MXFIndexEntryExt.cpp \
	MXFPackageResolver.cpp \
	MXFReader.cpp \
	MXFSequenceReader.cpp \
	MXFSequenceTrackReader.cpp \
	MXFTrackInfo.cpp

libmxfreader_la_CXXFLAGS = $(BMX_CFLAGS)

